Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-12509

[SHELL32] In My Computer folder, Properties missing

    XMLWordPrintable

Details

    Description

      In the My Computer Folder, when you right click, you can see in the context menu that the Properties selection is missing.

      Attachments

        1. My Computer Properties ROS.png
          44 kB
          milawynsrealm
        2. My Computer Properties XP.png
          684 kB
          milawynsrealm
        3. SVNr70702_wasStillOk.webm
          577 kB
          reactosfanboy

        Activity

          People

            hbelusca hbelusca
            milawynsrealm milawynsrealm
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: