[0.4.9][SHELL32] Add 'Properties' menu item in My Computer (#647) CORE-12509

- Add a Shell_DefaultContextMenuCallBack() helper function.
- Implement the IContextMenuCB interface in CDrivesFolder.

It regressed by some unknown commit in between SVN r70702 to r73408

fix picked from 0.4.10-dev-329-g 55469633cfbf20ba34bc747a80001bd4c7c4afb4